--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,10 +5,12 @@
                 <h4 class="alert-heading">
                     <%= err.message %>
                 </h4>
-                <h5>Stack Trace:</h4>
-                    <p>
-                        <%= err.stack %>
-                    </p>
+                <% if (process.env.NODE_ENV !=="production" ) { %>
+                    <h5>Stack Trace:</h4>
+                        <p>
+                            <%= err.stack %>
+                        </p>
+                        <% } %>
             </div>
         </div>
     </div>
